# sec-10-k-scraper

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: electron-lint.yml  electron-release.yml  electron-tests.yml  electron-typechecking.yml  update-electron-vendors.yml
.husky/: pre-commit
api/: connection.py
api/test/: connection_test.py
backend/: .flake8  .gitignore  backend.py  backend_server.py  backend_server.spec  backend_server_of.spec  entry.py  mypy.ini  parser_tester.py  pyproject.toml
backend/api/: connection.py
backend/api/test/: connection_test.py
backend/misc/: rate_limiting.py  serializable_dataclass.py
backend/misc/test/: rate_limiting_test.py
backend/output/: summary.xlsx
backend/parse/: parse.py
backend/parse/test/: parse_test.py
backend/parser/: parser.py
backend/parser/test/: parser_test.py
backend/pypyr/: build-backend.yaml  download-ner-model.yaml  quality-check.yaml
backend/pypyr/helpers/: download-file.py  move-file.py
backend/writer/: write_to_excel.py
parser/: parser.py
start_page/css/: example.css
start_page/html/: index.html
start_page/js/: index.js
ui/: .electron-builder.config.js  .eslintrc.json  .gitignore  .nano-staged.mjs  .simple-git-hooks.json  README.md  package-lock.json  package.json  wdio.conf.js
ui/test/specs/: search_test.js  window_test.js
