[tool.poetry]
name = "sec-10-k-scraper"
version = "0.1.0"
description = ""
authors = ["Edward Carl <55811915+edwardmcarl@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^22.3.0"


[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
docformatter = "^1.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
